AUT-2753 Split eIDAS RestTemplates for HTML and JSON flows